2023-08-12T08:08:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5840253985 # 1809
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: last 14d: unq all: 64 118
* notice: prev accum: outdated-unq outdated-all / unq all: 1443 4883 / 1523 5001
* notice: next accum: outdated-unq outdated-all / unq all: 1443 4883 / 1524 5002
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-29 2023-08-12]

2023-08-12T00:33:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5838270028 # 1808
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: last 14d: unq all: 64 118
* notice: prev accum: outdated-unq outdated-all / unq all: 1443 4883 / 1518 4992
* notice: next accum: outdated-unq outdated-all / unq all: 1443 4883 / 1523 5001
* notice: prev exec diff / last date diff / accum: unq all: +5 +9 -0 -0 / +12 +17 -0 -0 / 12 17
* notice: removed / changed dates: [] / [2023-08-11]

2023-08-11T16:08:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5834686123 # 1807
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
* notice: last 14d: unq all: 60 109
* notice: prev accum: outdated-unq outdated-all / unq all: 1441 4879 / 1516 4990
* notice: next accum: outdated-unq outdated-all / unq all: 1443 4883 / 1518 4992
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [2023-07-28] / [2023-08-11]

2023-08-11T08:09:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5830357076 # 1806