@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-12T08:08:40Z",
-  "count_outdated" : 4883,
-  "uniques_outdated" : 1443,
+  "timestamp" : "2023-08-12T16:08:20Z",
+  "count_outdated" : 4885,
+  "uniques_outdated" : 1444,
   "count" : 5002,
   "uniques" : 1524,
   "clones" : [
-    {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 2,
